# ml-app-deployment-proj

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  HF_AUTH_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION_NOTES.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  SKELETON_STATUS.md  UV_QUICKREF.md  backend_usage.md  cache_normalized_recipes.py  config.yaml  debug.py  docker-compose.yml  pyproject.toml  pytest.ini  recipe_recommender_demo.ipynb  requirements.txt  setup.sh  test_api.py
app/: __init__.py  api.py  api_extended.py  main.py
app/static/: style.css
data/: README.md  canonical_vocab.json  normalized_recipes.json  ontology_recipes.json  ontology_recipes.pkl
data/fridge_photos/: DATASET_INFO.md
data/fridge_photos_sample/: README.md  data.yaml
data/recipes_sample/: Food Ingredients and Recipe Dataset with Image Name Mapping.csv  README.md
deployment/: README.md
deployment/aws/: README.md
deployment/huggingface/: README.md  app.py
docs/: DESIGN_OVERVIEW.md  PROJECT_STRUCTURE.md  UV_MIGRATION.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  ErrorBoundary.jsx  index.css  main.jsx
frontend/src/components/: DetectedIngredients.css  DetectedIngredients.jsx  Header.css  Header.jsx  History.css  History.jsx  ImageUpload.css  ImageUpload.jsx  PantryList.css  PantryList.jsx  RecipeRecommendations.css  RecipeRecommendations.jsx  Settings.css  Settings.jsx
frontend/src/services/: api.js
ingredients-recognizing-system/: README.md  food_detector.py  food_model_trainer.py
notebooks/: README.md
recipe_matching_system/: .gitignore  README.md  WORKFLOW.md  pytest.ini  requirements.txt  setup.py
recipe_matching_system/recipe_matcher/: __init__.py  pipeline.py  preprocess.py  retrieval_engine.py
recipe_matching_system/recipe_matcher/utils/: __init__.py  helpers.py
recipe_matching_system/tests/: __init__.py  test_match.py  test_normalize.py  test_pipeline.py
runs/detection_20251117_214424/: events.out.tfevents.1763433865.lvkexindeMacBook-Pro-2.local.79920.0
runs/detection_20251117_222241/: events.out.tfevents.1763436162.lvkexindeMacBook-Pro-2.local.82015.0
runs/detection_20251117_230640/: events.out.tfevents.1763438800.lvkexindeMacBook-Pro-2.local.84162.0
runs/detection_20251117_230923/: events.out.tfevents.1763438964.lvkexindeMacBook-Pro-2.local.84521.0
runs/detection_20251120_163710/: events.out.tfevents.1763674631.lvkexindeMacBook-Pro-2.local.4506.0
runs/detection_20251120_164137/: events.out.tfevents.1763674897.lvkexindeMacBook-Pro-2.local.4974.0
runs/detection_20251120_164313/: events.out.tfevents.1763674994.lvkexindeMacBook-Pro-2.local.5181.0
runs/detection_20251120_164954/: events.out.tfevents.1763675394.lvkexindeMacBook-Pro-2.local.5699.0
runs/detection_20251120_202027/: events.out.tfevents.1763688028.lvkexindeMacBook-Pro-2.local.2896.0
runs/detection_20251120_202309/: events.out.tfevents.1763688190.lvkexindeMacBook-Pro-2.local.3119.0
runs/detection_20251120_223752/: events.out.tfevents.1763696273.lvkexindeMacBook-Pro-2.local.4789.0
runs/detection_20251120_233944/: events.out.tfevents.1763699984.lvkexindeMacBook-Pro-2.local.6430.0
runs/detection_20251121_133154/: events.out.tfevents.1763749915.lvkexindeMacBook-Pro-2.local.9629.0
runs/detection_20251121_133508/: events.out.tfevents.1763750109.lvkexindeMacBook-Pro-2.local.9820.0
runs/detection_20251121_133641/: events.out.tfevents.1763750201.lvkexindeMacBook-Pro-2.local.9984.0
runs/detection_20251121_133757/: events.out.tfevents.1763750278.lvkexindeMacBook-Pro-2.local.10156.0
src/: __init__.py
src/backend/: recipe_recommender.py
src/nlp/: __init__.py  embedder.py  retriever.py
src/recipes/: fridge_to_recipe.py  recipe_matcher.py  recipe_normalizer.py
src/utils/: __init__.py  clustering.py  helpers.py  metrics.py
src/vision/: README.md  TRAINING_GUIDE.md  __init__.py  backbone.py  dataset.py  detector.py  export_model.py  head.py  inference_test.py  loss.py  preprocessor.py  train_full.py  trainer.py  transforms.py  utils.py
src/vision/yolo_detector/: README.md  best.pt  example.py  food_detector.py  inspect_model_names.py  yolo_preprocessor.py
tests/: __init__.py  test_detector.py  test_retriever.py
